[package]
name        = "ultraslayer"
version     = "0.2.1"
edition     = "2021"
description = "Ultra‑low latency DRAM refresh‑stall prevention using hardware‑level hedging."
license     = "Apache-2.0"
readme      = "README.md"
repository  = "https://github.com/absalomedia/ultraslayer"
keywords    = ["hft", "low-latency", "dram", "refresh-stall", "mirroring"]
categories  = ["algorithms", "concurrency", "memory-management"]

# -----------------------------------------------------------------
# Core runtime dependencies – always compiled
# -----------------------------------------------------------------
[dependencies]
libc          = "0.2"
core_affinity = "0.8"
crossbeam     = "0.8"
memmap2       = "0.7"   # Now mandatory for Windows compatibility

# -----------------------------------------------------------------
# Optional dependencies – pulled in only when a feature is enabled
# -----------------------------------------------------------------
clap          = { version = "4", features = ["derive"], optional = true }   # CLI demo binary
criterion     = { version = "0.5", optional = true }                     # Benchmark harness
rand          = { version = "0.8", optional = true }                     # RNG for benchmarks

# -----------------------------------------------------------------
# Feature flags
# -----------------------------------------------------------------
[features]
default = []                # No optional code compiled by default

# Build the C‑FFI side‑car (`src/ffi.rs`).
sidecar   = []

# Build the demo CLI binary (`examples/ultraslayer_cli.rs`).
cli       = ["clap"]

# Build the benchmark harness (Criterion + Rand).
benchmark = ["criterion", "rand"]

# Build the slice view (`src/slice.rs`).
slice     = [] 

# Build the shared‑memory wrapper (`src/shm.rs`).
# Note: memmap2 is already in core dependencies, so we don't need to list it here.
shm       = []

# -----------------------------------------------------------------
# Build profiles
# -----------------------------------------------------------------
[profile.release]
lto              = true           # Full LTO
opt-level        = 3              # Aggressive speed optimisation
panic            = "abort"        # Remove unwinding overhead
codegen-units    = 1              # Maximise inlining
strip            = "symbols"      # Smaller binary, faster load
overflow-checks  = false          # Remove integer overflow branches
debug            = false          # No debug info

[profile.dev]
opt-level        = 1              # Faster dev builds
debug            = true

[profile.bench]
inherits         = "release"
debug            = true           # Keep symbols for profiling
